@@ -1,25 +1,25 @@
 <?php
 
 /**
-* Smarty Internal Plugin Compile Assign
-* 
-* Compiles the {assign} tag
-* 
-* @package Smarty
-* @subpackage Compiler
-* @author Uwe Tews 
-*/
+ * Smarty Internal Plugin Compile Assign
+ * 
+ * Compiles the {assign} tag
+ * 
+ * @package Smarty
+ * @subpackage Compiler
+ * @author Uwe Tews 
+ */
 /**
-* Smarty Internal Plugin Compile Assign Class
-*/
+ * Smarty Internal Plugin Compile Assign Class
+ */
 class Smarty_Internal_Compile_Assign extends Smarty_Internal_CompileBase {
     /**
-    * Compiles code for the {assign} tag
-    * 
-    * @param array $args array with attributes from parser
-    * @param object $compiler compiler object
-    * @return string compiled code
-    */
+     * Compiles code for the {assign} tag
+     * 
+     * @param array $args array with attributes from parser
+     * @param object $compiler compiler object
+     * @return string compiled code
+     */
     public function compile($args, $compiler)
     {
         $this->compiler = $compiler;
@@ -45,19 +45,15 @@ class Smarty_Internal_Compile_Assign extends Smarty_Internal_CompileBase {
                 $_scope = SMARTY_PARENT_SCOPE;
             } elseif ($_attr['scope'] == '\'root\'') {
                 $_scope = SMARTY_ROOT_SCOPE;
-           } elseif ($_attr['scope'] == '\'global\'') {
+            } elseif ($_attr['scope'] == '\'global\'') {
                 $_scope = SMARTY_GLOBAL_SCOPE;
             } 
         } 
         // compiled output
         if (isset($_attr['smarty_internal_index'])) {
-            if ($_attr['smarty_internal_index'] == '') {
-                return "<?php \$_smarty_tpl->append($_attr[var],$_attr[value],false,$_nocache,$_scope);?>";
-            } else {
-                return "<?php \$_tmp$_attr[smarty_internal_index] = $_attr[value]; \$_smarty_tpl->append($_attr[var],\$_tmp,true,$_nocache,$_scope); unset (\$_tmp);?>";
-            } 
+            return "<?php if (!isset(\$_smarty_tpl->tpl_vars[$_attr[var]]) || !is_array(\$_smarty_tpl->tpl_vars[$_attr[var]]->value)) \$_smarty_tpl->createLocalArrayVariable($_attr[var], $_nocache, $_scope);\n\$_smarty_tpl->tpl_vars[$_attr[var]]->value$_attr[smarty_internal_index] = $_attr[value];?>";
         } else {
-            return "<?php \$_smarty_tpl->assign($_attr[var],$_attr[value],$_nocache,$_scope);?>";
+            return "<?php \$_smarty_tpl->tpl_vars[$_attr[var]] = new Smarty_variable($_attr[value], $_nocache, $_scope);?>";
         } 
     } 
 } 
